--- a/index.html
+++ b/index.html
@@ -17,49 +17,49 @@
         <h1 class="busnumber">60</h1>
         <h3 class="col1-2">Randolph/Harbor Dr</h3>
         <h4 class="col1"><Eastbound</h4>
-        <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+        <img class="arrow" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">124</h1>
-        <h3 class="col1-2">Navy Pier</h3>
-        <h4 class="col1">Eastbound/Southbound</h4>
-        <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+        <h3 class="busline">Navy Pier</h3>
+        <h4 class="subtitle">Eastbound/Southbound</h4>
+        <img class="arrow" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">151</h1>
-        <h3 class="col1-2">Devon/Clark</h3>
-        <h4 class="col1">Northbound</h4>
-        <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+        <h3 class="busline">Devon/Clark</h3>
+        <h4 class="subtitle">Northbound</h4>
+        <img class="arrow" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">J14</h1>
-        <h3 class="col1-2">103rd/Stony Island</h3>
-        <h4 class="col1">Southbound</h4>
-        <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+        <h3 class="busline">103rd/Stony Island</h3>
+        <h4 class="subtitle">Southbound</h4>
+        <img class="arrow" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">4</h1>
-        <h3 class="col1-2">Cottage Grove</h3>
-        <h4 class="col1">Out Of Service until 12:10 AM</h4>
-        <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+        <h3 class="busline">Cottage Grove</h3>
+        <h4 class="subtitle">Out Of Service until 12:10 AM</h4>
+        <img class="arrow" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">20</h1>
-        <h3 class="col1-2">Madison</h3>
-        <h4 class="col1">Out Of Service until 12:10 AM</h4>
-        <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+        <h3 class="busline">Madison</h3>
+        <h4 class="subtitle">Out Of Service until 12:10 AM</h4>
+        <img class="arrow" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">20</h1>
-        <h3 class="col1-2">Streeterville/Taylor</h3>
-        <h4 class="col1">Out Of Service until 6:00 AM</h4>
-        <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+        <h3 class="busline">Streeterville/Taylor</h3>
+        <h4 class="subtitle">Out Of Service until 6:00 AM</h4>
+        <img class="arrow" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
           </ul>
       <ul class="container2">
         <h1 class="busnumber">6x</h1>
-        <h3 class="col1-2">Jackson Park Express</h3>
-        <h4 class="col1">Rerouted</h4>
-        <img class="col2" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
+        <h3 class="busline">Jackson Park Express</h3>
+        <h4 class="subtitle">Rerouted</h4>
+        <img class="arrow" src="https://raw.githubusercontent.com/mehmadrid414/Frontend_Challenge/master/Arrow%20Right.png"/>
           </ul>
       </body> 
     </html>
