--- a/arrivals.html
+++ b/arrivals.html
@@ -13,17 +13,23 @@
         <img src="Status Bar.png">
       </div>
       <div class="map">
-        <img src="Washington and State 3.png">
+        <img src="Washington and State 1.png">
       </div>
       <div class="backbutton">
-        <img src="Back Button.png">
+        <a href="stops.html"><img src="Back Button.png"></a>
       </div>
     <section class="menu">
+      <div class="stoptitle">
+        <h1>Washington & State</h1>
+      </div>
       <div class="segmentedcontrols-col1">
-        <a href="stops.html">Stops</a>
+        <a href="directions.html">Directions</a>
       </div>
       <div class="segmentedcontrols-col2">
-        <a href="index.html">Lines</a>
+        <a href="savestop.html">Save Stop</a>
+      </div>
+      <div class="nextarrival">
+        <h2>Next Arrival</h2>
       </div>
       <div class="bus">
         <h1 class="busnumber">124</h1>
@@ -37,6 +43,9 @@
         <div class="arrowright">
           <img src="Arrow Right.png">
         </div>
+      </div>
+      <div class="upcomingarrivals">
+        <h2>Upcoming Arrivals</h2>
       </div>
       <div class="bus">
         <h1 class="busnumber">J14</h1>
