--- a/arrivals.html
+++ b/arrivals.html
@@ -4,7 +4,7 @@
   <title>BusyBus Line List</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style_arrivals.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 </head>
   <body>
