--- a/arrivals.html
+++ b/arrivals.html
@@ -47,7 +47,7 @@
       <div class="upcomingarrivals">
         <h2>Upcoming Arrivals</h2>
       </div>
-      <div class="bus">
+      <div class="bus1">
         <h1 class="busnumber">J14</h1>
         <div class="content">
         <h3 class="busline">103rd/Stony Island</h3>
@@ -60,7 +60,7 @@
           <img src="Arrow Right.png">
         </div>
       </div>
-      <div class="bus">
+      <div class="bus1">
         <h1 class="busnumber">151</h1>
         <div class="content">
         <h3 class="busline">Devon/Clark</h3>
@@ -73,7 +73,7 @@
           <img src="Arrow Right.png">
         </div>
       </div>
-      <div class="bus">
+      <div class="bus1">
         <h1 class="busnumber">60</h1>
         <div class="content">
         <h3 class="busline">Randolph/Harbor Dr</h3>
