--- a/arrivals.html
+++ b/arrivals.html
@@ -18,6 +18,9 @@
       <div class="backbutton">
         <a href="stops.html"><img src="Back Button.png"></a>
       </div>
+      <div class="buttons">
+        <img src="Buttons.png">
+      </div>
     <section class="menu">
       <div class="stoptitle">
         <h1>Washington & State</h1>
